Fix DocSearch Placeholder Text Contrast

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -364,7 +364,7 @@ html .DocSearch {
 
 html .DocSearch-Button-Placeholder {
   font-size: 0.85rem;
-  color: #6E6F73;
+  color: #bfafeb;
 }
 html .DocSearch-Button .DocSearch-Search-Icon {
   color: #BFAFEB;
@@ -372,7 +372,10 @@ html .DocSearch-Button .DocSearch-Search-Icon {
 
 .DocSearch-Button:active .DocSearch-Search-Icon,
 .DocSearch-Button:focus .DocSearch-Search-Icon,
-.DocSearch-Button:hover .DocSearch-Search-Icon {
+.DocSearch-Button:hover .DocSearch-Search-Icon,
+.DocSearch-Button:active .DocSearch-Button-Placeholder,
+.DocSearch-Button:focus .DocSearch-Button-Placeholder,
+.DocSearch-Button:hover .DocSearch-Button-Placeholder, {
   color: black;
 }
 
